--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">onlineFurniture</string>
     <string name="RegisterUser">RegisterUser</string>
+    <string name="registeruser">RegisterUser</string>
+    <string name="username">UserName</string>
 </resources>
